tests/baselines/reference/computedPropertyNamesContextualType9_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType9_ES5.ts(6,5): error TS2322: Type '{ [x: number]: "" | 0; }' is not assignable to type 'I'.
  Index signatures are incompatible.
    Type '"" | 0' is not assignable to type 'boolean'.
      Type '""' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType9_ES5.ts (1 errors) ====
    interface I {
        [s: string]: boolean;
        [s: number]: boolean;
    }
    
    var o: I = {
        ~
!!! error TS2322: Type '{ [x: number]: "" | 0; }' is not assignable to type 'I'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '"" | 0' is not assignable to type 'boolean'.
!!! error TS2322:       Type '""' is not assignable to type 'boolean'.
        [+"foo"]: "",
        [+"bar"]: 0
    }